--- a/src/index.html
+++ b/src/index.html
@@ -113,18 +113,36 @@
             </div>
           </section>
           <section id="pricing">
-            <div class="grid">
+            <div class="product-grid">
               <div class="product" id="product-first">
                 <div class="product-heading">Sennheiser Momentum</div>
                 <h2>100 $</h2>
+                <ul>
+                  <li>Lorem ipsum dolor sit amet.</li>
+                  <li>Lorem ipsum dolor sit amet.</li>
+                  <li>Lorem ipsum dolor sit amet.</li>
+                  <li>Lorem ipsum dolor sit amet.</li>
+                </ul>
               </div>
               <div class="product" id="product-second">
                 <div class="product-heading">Sennheiser Wireless</div>
                 <h2>125 $</h2>
+                <ul>
+                  <li>Lorem ipsum dolor sit amet.</li>
+                  <li>Lorem ipsum dolor sit amet.</li>
+                  <li>Lorem ipsum dolor sit amet.</li>
+                  <li>Lorem ipsum dolor sit amet.</li>
+                </ul>
               </div>
               <div class="product" id="product-third">
                 <div class="product-heading">Sennheiser HD25</div>
                 <h2>80 $</h2>
+                <ul>
+                  <li>Lorem ipsum dolor sit amet.</li>
+                  <li>Lorem ipsum dolor sit amet.</li>
+                  <li>Lorem ipsum dolor sit amet.</li>
+                  <li>Lorem ipsum dolor sit amet.</li>
+                </ul>
               </div>
             </div>
           </section>
