refactoring acc. to project requrements

--- a/src/index.html
+++ b/src/index.html
@@ -27,21 +27,22 @@
           <nav id="nav-bar">
             <ul>
               <li><a class="nav-link" href="#features">Features</a></li>
-              <li><a class="nav-link" href="#how-it-works">Products</a></li>
+              <li><a class="nav-link" href="#products">Products</a></li>
               <li><a class="nav-link" href="#pricing">Pricing</a></li>
             </ul>
           </nav>
         </header>
-        <form id="form">
+        <form id="form" action="https://www.freecodecamp.com/email-submit">
           <h1>Submit your email to newsletter</h1>
           <input
             type="email"
-            name=""
+            name="email"
             id="email"
             placeholder="Type your email..."
+            required
           />
           <br />
-          <button type="submit">Submit</button>
+          <input type="submit" id="submit" value="Submit"></input>
         </form>
         <div id="container">
           <section id="features">
@@ -147,7 +148,14 @@
             </div>
           </section>
         </div>
-        <footer></footer>
+        <footer>
+          <ul>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+          <span>Copyright 2016, Original Trombones</span>
+        </footer>
       </div>
     </main>
   </body>
